refatoracao e ajustes